apps/hello-newapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-newapp
  namespace: hello-newapp
spec:
  selector:
    app: hello-newapp
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
